# Dashboard_music_platform_algo_spotify

./: .cache  .dockerignore  .env.example  .env.railway.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  DEVLOG.md  Dockerfile  Dockerfile.airflow  Dockerfile.api  Makefile  README.md  Raccourcis.txt  analyse_apple_music_csv.py  check_meta_schema.py  check_popularity_data.py  check_popularity_table.py  check_youtube_credentials.py  check_youtube_data.py  collect_and_store.py  collect_and_store_meta_ads.py  correctif_dashboard_popularite.py  create_meta_tables.py  create_track_popularity_table.py  debug_config_reader.py  diagnose_popularity.py  diagnose_popularity_data.py  diagnose_youtube.py  docker-compose.example.yml  docker-compose.yml  fix_database.py  fix_meta_schema.py  hypeddit_manual_schema.py  hypeddit_schema.py  init_db.sql  install_hypeddit.py  list_database.py  (+27 more)
.claude/: settings.json
.github/: dependabot.yml
.streamlit/: config.toml
airflow/: .env  airflow.cfg
config/: config.example.yaml
deploy/: Caddyfile
docs/: onboarding.html
machine_learning/: Biblio ML.xlsx  COMPARISON_REPORT.md  data_analysis_ml.ipynb  derive_thresholds.py  export_calibration_bands.py  export_lifecycle_benchmark.py  train.py
migrations/: 002_schema_fixes.sql  003_youtube_unique.sql  004_stripe_billing.sql  005_wrapped_table.sql  006_etl_monitoring.sql  007_saas_users.sql  008_email_verification.sql  009_gdpr.sql  010_imusician_csv_tables.sql  010_update_plan_features.sql  011_campaign_track_mapping_artist_id.sql  012_meta_ads_api.sql  013_meta_ads_creative_targeting.sql  014_referral_system.sql  015_promo_codes.sql  016_performance_indexes.sql  017_meta_custom_conversions.sql  017_security_hardening.sql  018_totp_rate_limit_gdpr.sql  019_collected_at_timestamp.sql  020_s4a_audience_playlist_adds.sql  021_s4a_song_playlists.sql  022_s4a_song_playlist_adds.sql  023_s4a_songs_global_window.sql  024_s4a_song_playlist_adds_redesign.sql  025_csv_upload_audit_log.sql  026_active_sessions.sql  027_instagram_media.sql  028_soundcloud_track_created_at.sql  029_subscription_plan_history.sql  030_track_release_reference.sql  031_imusician_monthly_revenue_source.sql  032_meta_ad_adset_breakdowns.sql  033_wrapped_gains_pct.sql  034_wrapped_top_fans.sql  035_algo_lifecycle_benchmark.sql  036_ml_radio_streams_forecast.sql  037_ml_pi_forecast.sql  038_s4a_song_saves_daily.sql  039_tracks_multi_tenant.sql  (+25 more)
scripts/: backup_db.sh  check_api_keys_meta.py  create_mapping_table.py  debug_youtube.py  ingest_meta_csv.py  manage_mapping.py  migrate_saas_artist_id.py  process_apple_music_csv.py  process_s4a_csv.py  test_email.py  test_youtube_auth.py
streamlit_app/: app.py
tests/: conftest.py  test_algo_knowledge.py  test_allowed_tables_coverage.py  test_api.py  test_api_db_smoke.py  test_api_security.py  test_app_costs.py  test_artist_readiness.py  test_collectors_dotenv_guarded.py  test_collectors_errors.py  test_compose_parity.py  test_credential_loader.py  test_csv_exporter.py  test_dag_fleet_isolation.py  test_db_table_allowlist.py  test_distrokid_parser.py  test_distrokid_revenue.py  test_entity_period_filter.py  test_env_contract.py  test_error_alert.py  test_error_handler.py  test_guide_pdf.py  test_i18n.py  test_i18n_orphans.py  test_imusician_csv_parser.py  test_live_pulse.py  test_meta_ads_collector.py  test_meta_ads_run.py  test_ml_inference.py  test_parsers.py  (+21 more)
(+531 files in other folders)
