[project]
name = "streamlytics"
version = "0.1.0"
description = "streaMLytics — multi-tenant music analytics SaaS (ELT pipeline + Streamlit dashboard)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Data & processing
    "pandas==2.1.4",
    "numpy==1.26.2",
    "psutil>=5.9.0",
    "xgboost>=2.0.0",
    # scikit-learn is an implicit runtime dependency of xgboost 2.x:
    # XGBClassifier.predict_proba() and XGBRegressor.predict() fail at call
    # time with `sklearn needs to be installed` if it's missing. Discovered
    # 2026-05-14 when ml_scoring_daily was found silently broken in the
    # Airflow image (xgboost present, sklearn absent). Pin >=1.3 — xgboost 2
    # uses the modern estimator API.
    "scikit-learn>=1.3.0",
    "shap>=0.44.0",

    # API clients
    "facebook-business==18.0.0",
    "spotipy==2.23.0",
    "google-api-python-client==2.108.0",

    # Dashboard (Streamlit + plotly + PDF rendering)
    "streamlit==1.54.0",
    "plotly==5.18.0",
    "watchdog==3.0.0",
    "weasyprint>=62.0",
    "openpyxl",                 # meta_insight xlsx watcher

    # Utilities
    "python-dateutil>=2.8.2",
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "cryptography>=42.0.0",
    "isodate==0.6.1",

    # REST API (Brick 14)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # bcrypt 4.1+ rejects passwords >72 bytes with ValueError, breaking
    # passlib 1.7.4's detect_wrap_bug probe (73-byte secret). Without this
    # pin, the entire bcrypt backend fails to load and login tests crash.
    # Re-evaluate when passlib >1.7.4 ships (project dormant since 2020).
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.9",

    # Stripe billing (Brick 21)
    "stripe>=8.0.0",

    # TOTP 2FA (Brick 28)
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",

    # Database driver
    "psycopg2-binary==2.9.9",

    # Airflow providers (installed in Airflow Docker image, but declared for
    # local-dev consistency — we don't pin Airflow itself here)
    "apache-airflow-providers-postgres",
    "apache-airflow-providers-http",
    "apache-airflow-providers-common-sql",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff==0.15.5",
    # Pre-commit framework + secret scanner (.pre-commit-config.yaml)
    "pre-commit>=4.6.0",
    "detect-secrets>=1.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Existing ruff config lives in ruff.toml — keep it authoritative.
extend = "ruff.toml"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/api/main.py",          # FastAPI entry — exercised by integration tests we don't run in CI yet
    "*/__pycache__/*",
    "*/migrations/*",
    "*/tests/*",
]
branch = true

[tool.coverage.report]
# No fail_under threshold yet — we're measuring first, gating later (avoids
# arbitrary number-chasing before there's a baseline).
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
